// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageImage should  render <MessageImage /> and compare with snapshot 1`] = `
<View
  style={
    Array [
      Object {},
      Object {},
    ]
  }
>
  <Lightbox
    activeProps={
      Object {
        "style": Object {
          "flex": 1,
          "resizeMode": "contain",
        },
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "url://to/image.png",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 13,
            "height": 100,
            "margin": 3,
            "resizeMode": "cover",
            "width": 150,
          },
          Object {},
        ]
      }
    />
  </Lightbox>
</View>
`;

exports[`MessageImage should not render <MessageImage /> and compare with snapshot 1`] = `
<View
  style={
    Array [
      Object {},
      Object {},
    ]
  }
>
  <Lightbox
    activeProps={
      Object {
        "style": Object {
          "flex": 1,
          "resizeMode": "contain",
        },
      }
    }
  >
    <Image
      source={
        Object {
          "uri": null,
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 13,
            "height": 100,
            "margin": 3,
            "resizeMode": "cover",
            "width": 150,
          },
          Object {},
        ]
      }
    />
  </Lightbox>
</View>
`;
